<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picregistro"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-57dp">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="255dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="200dp"
        android:minHeight="48dp"
        android:text="Soy lo máximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corner"
        android:elevation="6dp"
        android:text="Regresameee"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/rounded_corner"
        android:elevation="6dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        android:background="@drawable/rounded_corner_spinner"
        android:contentDescription="@string/log_in"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="398dp" />

    <EditText
        android:id="@+id/fec"
        android:layout_width="151dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="Día/Mes/Año"
        android:inputType="date"
        android:padding="15dp"
        android:textColorHint="#546E7A"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="479dp" />

    <Button
        android:id="@+id/clic"
        android:layout_width="85dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/click"
        android:textAllCaps="false"
        app:cornerRadius="0dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="476dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="260dp"
        android:text="Fecha de nacimiento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/num"
        android:layout_width="266dp"
        android:layout_height="46dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="130dp"
        android:ems="10"
        android:hint="@string/msj_num"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="147dp"
        android:text="Número telefónico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="535dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="94dp"
        android:text="@string/estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="379dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:text="@string/efectivo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:text="@string/tarjeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="200dp"
        android:text="@string/payType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pswd" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/clien"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:gravity="center"
        android:text="@string/clien_vend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/vend"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="309dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pswd"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="@string/usr_lbl"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toStartOf="@+id/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="174dp"
        android:layout_height="49dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="@string/userlabel"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usuario"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/pswd"
        android:layout_width="145dp"
        android:layout_height="49dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="@string/contra_lbl"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="242dp"
        android:layout_height="68dp"
        android:layout_marginEnd="169dp"
        android:fontFamily="@font/secular_one"
        android:gravity="center"
        android:text="Registro"
        android:textColor="#9F4307"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="255dp"
        android:layout_marginEnd="47dp"
        android:text="¿Es lo máximo?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="457dp" />

</androidx.constraintlayout.widget.ConstraintLayout>